[package]
name = "iced-marpii-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
marpii-rmg-shared = { path = "../../../marpii-rmg-shared" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "bd1a6fc5cb05de3bf00d13c22e086a3aac0bc12e" }
bytemuck = { version = "1.22", features = ["derive"] }
