[package]
name = "iced-marpii-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
marpii-rmg-shared = { path = "../../../marpii-rmg-shared" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "2aa4d4f8a8ba73103501562cfca17b8163e5a887" }
bytemuck = { version = "1.22", features = ["derive"] }
