[package]
name = "shader-builder"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
shader-quad = { path = "../shader-quad" }
shader-quad-gradient = { path = "../shader-quad-gradient" }
shader-shape = { path = "../shader-shape" }
shader-text = { path = "../shader-text" }
iced-marpii-shared = { path = "../iced-marpii-shared" }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "bd1a6fc5cb05de3bf00d13c22e086a3aac0bc12e" }
